Added html blocks and their styles, that i'v done for previous lesson

--- a/index.html
+++ b/index.html
@@ -4,7 +4,142 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap" rel="stylesheet" />
+    <link rel="stylesheet" href="./css/style.css" />
     <title>Advanced IT Studio</title>
   </head>
-  <body></body>
+  <body>
+    <main>
+      <section class="promo">
+        <header>
+          <div class="container header__container">
+            <nav class="header__nav">
+              <a href="#" class="header__nav-item">Главная</a>
+              <a href="#" class="header__nav-item">Наши проекты</a>
+              <a href="#" class="header__nav-item">Услуги</a>
+              <a href="#" class="header__nav-item">Новости</a>
+              <a href="#" class="header__nav-item">Контакты</a>
+            </nav>
+          </div>
+        </header>
+        <div class="promo__main">
+          <div class="container promo__main-container">
+            <span class="promo__org-name">Передовая IT студия</span>
+            <h1 class="promo__title">Мы создаем легкие решения сложных задач и проблем</h1>
+            <button class="button promo__button">Наши проекты</button>
+          </div>
+        </div>
+      </section>
+      <section class="services">
+        <div class="container services__container">
+          <h2 class="subtitle services__subtitle">Мы создаем мобильные приложения для крупных корпораций</h2>
+          <p class="main-text services__descr">Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для текстов на латинице с начала XVI века.</p>
+          <ul class="services__list">
+            <li class="services__list-item">
+              <div class="services-list__picture-container services-list__picture-container_outer">
+                <div class="services-list__picture-container services-list__picture-container_inner">
+                  <img src="./img/services__point.png" alt="service logo" />
+                </div>
+              </div>
+              <div class="services-list__text-container">
+                <h3 class="list-subtitles services-list__subtitle">Создание сайтов</h3>
+                <p class="main-text services-list__descr">Lorem Ipsum - это текст- "рыба", часто используе в печати и вэб-дизайне.</p>
+              </div>
+            </li>
+            <li class="services__list-item">
+              <div class="services-list__picture-container services-list__picture-container_outer">
+                <div class="services-list__picture-container services-list__picture-container_inner">
+                  <img src="./img/services__point.png" alt="service logo" />
+                </div>
+              </div>
+              <div class="services-list__text-container">
+                <h3 class="list-subtitles services-list__subtitle">Создание сайтов</h3>
+                <p class="main-text services-list__descr">Lorem Ipsum - это текст- "рыба", часто используе в печати и вэб-дизайне.</p>
+              </div>
+            </li>
+            <li class="services__list-item">
+              <div class="services-list__picture-container services-list__picture-container_outer">
+                <div class="services-list__picture-container services-list__picture-container_inner">
+                  <img src="./img/services__point.png" alt="service logo" />
+                </div>
+              </div>
+              <div class="services-list__text-container">
+                <h3 class="list-subtitles services-list__subtitle">Создание сайтов</h3>
+                <p class="main-text services-list__descr">Lorem Ipsum - это текст- "рыба", часто используе в печати и вэб-дизайне.</p>
+              </div>
+            </li>
+          </ul>
+          <button class="button services__button">Все услуги</button>
+        </div>
+      </section>
+      <section class="standards">
+        <div class="container standards__container">
+          <div class="standards__content">
+            <div class="standards__content-text">
+              <h2 class="subtitle standards__subtitle">Высокие стандарты разработки</h2>
+              <p class="main-text standards__descr">Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для текстов на латинице с начала XVI века. стандартной "рыбой" для текстов на латинице с начала XVI века.</p>
+              <a href="#" class="main-link standards__link">Подробнее о компании</a>
+            </div>
+            <img class="standards__picture" src="./img/standard-picture.png" alt="standartization" />
+          </div>
+          <div class="standards__projects-examples">
+            <div class="standards__projects-example">
+              <img src="./img/our-projects--logo.png" alt="Projects-logo" />
+              <span class="standards__projects-amount">125</span>
+              <span class="main-text standards__projects-definition">Our projects</span>
+            </div>
+            <div class="standards__projects-example">
+              <img src="./img/our-projects--logo.png" alt="Projects-logo" />
+              <span class="standards__projects-amount">125</span>
+              <span class="main-text standards__projects-definition">Our projects</span>
+            </div>
+            <div class="standards__projects-example">
+              <img src="./img/our-projects--logo.png" alt="Projects-logo" />
+              <span class="standards__projects-amount">125</span>
+              <span class="main-text standards__projects-definition">Our projects</span>
+            </div>
+            <div class="standards__projects-example">
+              <img src="./img/our-projects--logo.png" alt="Projects-logo" />
+              <span class="standards__projects-amount">125</span>
+              <span class="main-text standards__projects-definition">Our projects</span>
+            </div>
+            <div class="standards__projects-example">
+              <img src="./img/our-projects--logo.png" alt="Projects-logo" />
+              <span class="standards__projects-amount">125</span>
+              <span class="main-text standards__projects-definition">Our projects</span>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="specialization">
+        <div class="container specialization__container">
+          <div class="specialization__subtitle-container">
+            <h2 class="subtitle specialization__subtitle">Наши работы, на которых мы специализируемся</h2>
+            <button class="button specialization__button">Все услуги</button>
+          </div>
+          <div class="spezialization__content-container">
+            <div class="spezialization__content-point">
+              <img src="./img/spezialization-picture.png" alt="Specialized project" />
+              <h4 class="content-subtitles spezialization__point-subtitle"><span class="spezialization__point-number">01.</span> Исследование и упаковка</h4>
+              <p class="main-text spezialization__point-text">Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для текстов на латинице с начала XVI века.</p>
+              <a href="#" class="main-link spezialization__point-link">Подробнее</a>
+            </div>
+            <div class="spezialization__content-point">
+              <img src="./img/spezialization-picture.png" alt="Specialized project" />
+              <h4 class="content-subtitles spezialization__point-subtitle"><span class="spezialization__point-number">01.</span> Исследование и упаковка</h4>
+              <p class="main-text spezialization__point-text">Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для текстов на латинице с начала XVI века.</p>
+              <a href="#" class="main-link spezialization__point-link">Подробнее</a>
+            </div>
+            <div class="spezialization__content-point">
+              <img src="./img/spezialization-picture.png" alt="Specialized project" />
+              <h4 class="content-subtitles spezialization__point-subtitle"><span class="spezialization__point-number">01.</span> Исследование и упаковка</h4>
+              <p class="main-text spezialization__point-text">Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для текстов на латинице с начала XVI века.</p>
+              <a href="#" class="main-link spezialization__point-link">Подробнее</a>
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
+  </body>
 </html>
