added the 'portfolio' section and styles for it

--- a/index.html
+++ b/index.html
@@ -140,6 +140,19 @@
           </div>
         </div>
       </section>
+      <section class="portfolio">
+        <div class="container potfolio__container">
+          <h2 class="subtitle portfpolio__subtitle">Наши проекты</h2>
+          <p class="main-text portfolio__descr">Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для текстов на латинице с начала XVI века.</p>
+          <div class="portfolio__examples-container">
+            <img src="./img/portfolio-example.png" alt="Project example" />
+            <img src="./img/portfolio-example.png" alt="Project example" />
+            <img src="./img/portfolio-example.png" alt="Project example" />
+            <img src="./img/portfolio-example.png" alt="Project example" />
+          </div>
+          <button class="button portfolio__btn">Все проекты</button>
+        </div>
+      </section>
     </main>
   </body>
 </html>
