added the 'demo' block and styles for it

--- a/index.html
+++ b/index.html
@@ -153,6 +153,20 @@
           <button class="button portfolio__btn">Все проекты</button>
         </div>
       </section>
+      <section class="demo">
+        <div class="demo__video-wrapper">
+          <button class="play-button demo__play-video">
+            <div class="play-button__picture-wrapper">
+              <img src="./img/play-button--picture.png" alt="Play video" />
+            </div>
+            <span class="play-button__text">Смотреть видео</span>
+          </button>
+        </div>
+        <div class="container demo__container">
+          <h2 class="subtitle demo__subtitle">Видео о нашей работе</h2>
+          <p class="main-text demo-info">Просто посмотрите, как мы работаем</p>
+        </div>
+      </section>
     </main>
   </body>
 </html>
