added the 'subscribe' block and styles for it

--- a/index.html
+++ b/index.html
@@ -167,6 +167,18 @@
           <p class="main-text demo-info">Просто посмотрите, как мы работаем</p>
         </div>
       </section>
+    </section>
+    <section class="subscribe">
+      <div class="container subscribe__container">
+        <h3 class="subscribe__subtitle">Подпишитесь на нашу рассылку</h3>
+        <p class="main-text subscribe__offer">Полезные статьи, акции, новости - получите все это сейчас!</p>
+        <form action="#" class="subscribe-form subscribe__user-data">
+          <input class="subscribe-form__user-mail" type="email" placeholder="Ваш e-mail" />
+          <input class="button subcribe-form__send-button" c type="submit" />
+        </form>
+        <p class="main-text subscribe__assurance">Мы не шлем спам, и передаем никому ваши данные.</p>
+      </div>
+    </section>
     </main>
   </body>
 </html>
