--- a/index.html
+++ b/index.html
@@ -179,6 +179,72 @@
         <p class="main-text subscribe__assurance">Мы не шлем спам, и передаем никому ваши данные.</p>
       </div>
     </section>
+    <footer class="footer">
+        <div class="container footer__container">
+          <div class="footer__lists-wrapper">
+            <div class="footer__list-container">
+              <h5 class="footer-subtitle footer-list__subtitle">Контактная информация</h5>
+              <ul class="footer-list footer__contacts-list">
+                <li class="footer__contacts-item footer__contacts-item_email">test@test.ru</li>
+                <li class="footer__contacts-item footer__contacts-item_phone-number">+8 777 555 66 99</li>
+                <li class="footer__contacts-item footer__contacts-item_location">Москва, Бульвар Ленина 33</li>
+              </ul>
+            </div>
+            <div class="footer__list-container">
+              <h5 class="footer-subtitle footer-list__subtitle">Основные ссылки</h5>
+              <ul class="footer-list footer__links-list">
+                <li class="footer__links-item">
+                  <a href="#">Главная</a>
+                </li>
+                <li class="footer__links-item">
+                  <a href="#">Наши проекты</a>
+                </li>
+                <li class="footer__links-item">
+                  <a href="#">Наши услуги</a>
+                </li>
+                <li class="footer__links-item">
+                  <a href="#">Контакты</a>
+                </li>
+              </ul>
+            </div>
+            <div class="footer__list-container">
+              <h5 class="footer-subtitle footer-list__subtitle">Наши проекты</h5>
+              <ul class="footer-list footer__links-list">
+                <li class="footer__links-item">
+                  <a href="#">РосНано</a>
+                </li>
+                <li class="footer__links-item">
+                  <a href="#">Сколково</a>
+                </li>
+                <li class="footer__links-item">
+                  <a href="#">Проект “Восток”</a>
+                </li>
+                <li class="footer__links-item">
+                  <a href="#">ТЭЦ Калининграда</a>
+                </li>
+              </ul>
+            </div>
+            <div class="footer__list-container">
+              <h5 class="footer-subtitle footer-list__subtitle">Социальные сети</h5>
+              <ul class="footer-list footer__links-list">
+                <li class="footer__links-item">
+                  <a href="#">VK.com</a>
+                </li>
+                <li class="footer__links-item">
+                  <a href="#">Instagram</a>
+                </li>
+                <li class="footer__links-item">
+                  <a href="#">Facebook</a>
+                </li>
+                <li class="footer__links-item">
+                  <a href="#">Twitter</a>
+                </li>
+              </ul>
+            </div>
+          </div>
+          <span class="footer__copyright">(с) 2019. Все права защищены.</span>
+        </div>
+      </footer>
     </main>
   </body>
 </html>
